--- a/css/main.css
+++ b/css/main.css
@@ -638,12 +638,13 @@ content: "";
 position: absolute;
 z-index: 0;
 width: 100%;
-height: 100%;
+height: 91%;
 top: 250px;
 -webkit-transform: skewY(-12deg);
 transform: skewY(-12deg);
 background: #242629;
 border-top: 3px solid #010101;
+border: 2px solid yellow;
 }
 
 
