--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,9 @@
   font-family: "Montserrat", sans-serif;
 }
 
-
 .wrapper {
   background-color: var(--primary-background);
 }
-
 
 /* Start Navbar Styling */
 .navbar {
@@ -23,6 +21,7 @@
   z-index: 2;
   background-color: var(--secondary-background);
 }
+
 
 .main-nav {
   display: none;
@@ -85,16 +84,56 @@
   padding-left: 1rem;
 }
 
-#js-menu li {
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 1em; */
+/* Theme Toggle */
+.toggle-container {
+  margin: auto;
 }
 
-.navbar {}
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
 
+.label {
+  width: 6rem;
+  height: 2.6rem;
+  background-color: black;
+  display: flex;
+  border-radius: 50px;
+  border: .2rem solid var(--font-secondary);
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  cursor: pointer;
+}
 
+.ball {
+  width: 2.1rem;
+  height: 2rem;
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 0.2rem;
+  border-radius: 50%;
+  transition: transform 0.2s linear;
+  transform: translateY(-50%);
+}
+
+/*  target the elemenent after the label*/
+.checkbox:checked+.label .ball {
+  transform: translateX(3.4rem) translateY(-50%);
+
+}
+
+.fa-moon {
+  color: pink;
+  right: .4rem;
+}
+
+.fa-sun {
+  color: yellow;
+  left: .4rem;
+}
 
 /* ============================ 
 =====   Default styles =======
@@ -540,8 +579,6 @@ p::selection {
 /* ============================ 
 =====   contact Section   =======
 ============================== */
-
-
 .contact-section {
   margin-top: 4rem;
 }
@@ -549,8 +586,13 @@ p::selection {
 .contact-box-section {
   display: flex;
   flex-direction: column;
+}
+
+.contact-box-section form {
   margin-top: 3rem;
-  row-gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .contact-box {
@@ -584,6 +626,11 @@ textarea {
   background-color: var(--seconary-background);
   border: none;
   border-bottom: var(--section-border);
+  color: var(--font-primary);
+}
+
+.contact-box-section input:focus {
+  color: var(--font-primary);
 }
 
 ::placeholder {
@@ -783,6 +830,7 @@ footer button {
     flex-direction: row;
     gap: 2rem;
     border: none;
+    box-shadow: none;
   }
 
   .navbar {
@@ -876,7 +924,7 @@ footer button {
   }
 
   .about-section {
-    margin: 30rem 0;
+    margin: 35rem 0;
     width: 58%;
     margin-left: 1%;
   }
@@ -909,12 +957,13 @@ footer button {
   .side-svgs {
     display: flex;
     position: absolute;
-    top: 8em;
+    top: 8vw;
     width: 88vw;
     max-width: 110em;
     margin-left: 35vw;
     height: auto;
     flex-direction: column;
+    z-index: 2;
   }
 
   .what {
@@ -982,9 +1031,8 @@ footer button {
     max-width: 150rem;
   }
 
-  .contact-box-section {
+  .contact-box-section form {
     flex-direction: row;
-    justify-content: space-between;
   }
 
   .contact-box {
@@ -992,9 +1040,6 @@ footer button {
   }
 
 }
-
-
-
 
 
 @media (min-width: 769px) and (max-width: 1200px) {
