refactor: add newer projects

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-/* Import variables */
+/* TODO: Rewrite this entire file */
+
 @import "variables.css";
 
 * {
@@ -517,6 +518,7 @@ p::selection {
 .toolIcons img {
   padding: 1rem;
   width: 6rem;
+  height: 6rem;
   border: var(--section-border);
   border-radius: .5rem;
   background-color: white;
@@ -982,7 +984,7 @@ footer button {
   }
 
   .what p {
-    max-width: 120rem;
+    max-width: 85rem;
   }
 
   .skills-section {
